# bevy_dynamic_bundle

./: Cargo.toml  README.md
examples/: simple_dyn_bundle.rs  spawner.rs
src/: lib.rs
