[package]
name = "bevy_dynamic_bundle"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/oskuhansson/bevy_dynamic_bundle"
license-file = "LICENSE"
documentation = "https://docs.rs/bevy_dynamic_bundle"

keywords = ["gamedev", "bevy", "dyn"]
categories = ["game-development"]

description = "Provides dynamic bundles for bevy"
readme = "README.md"

[dependencies]
bevy = "0.13.2"
dyn-clone = "1.0.17"
